<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/MatchMatch.Vertical"
    android:background="@color/bg_base"
    android:fitsSystemWindows="true">

    <include layout="@layout/common_toolbar" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:scaleType="fitCenter"
        android:src="@mipmap/ic_org_logo"
        app:riv_corner_radius="5dp" />

    <ScrollView
        android:id="@+id/scrollView"
        style="@style/MatchWrap"
        android:scrollbars="none">

        <LinearLayout style="@style/MatchWrap.Vertical">

            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:addStatesFromChildren="true"
                android:background="@drawable/bg_company_selector"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/et_company_code"
                    style="@style/AutoMatchTextViewStyle"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:completionThreshold="1"
                    android:drawableLeft="@mipmap/ic_company"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_company_code"
                    android:singleLine="true"
                    android:textSize="@dimen/normal_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textCursorDrawable="@drawable/ic_focus" />

                <ImageView
                    android:id="@+id/iv_expand_copany_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/ic_expand" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:addStatesFromChildren="true"
                android:background="@drawable/bg_company_selector"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <AutoCompleteTextView
                    android:id="@+id/et_login_name"
                    style="@style/AutoMatchTextViewStyle"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:completionThreshold="1"
                    android:drawableLeft="@mipmap/ic_login_name"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_name"
                    android:textSize="@dimen/normal_text_size"
                    android:paddingBottom="3dp"
                    android:paddingTop="3dp"
                    android:singleLine="true"
                    android:textColorHint="@color/secondary_text"
                    android:textCursorDrawable="@drawable/ic_focus" />

                <ImageView
                    android:id="@+id/iv_expand_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:background="@mipmap/ic_expand" />
            </LinearLayout>

            <LinearLayout
                style="@style/MatchWrap.Horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:addStatesFromChildren="true"
                android:background="@drawable/bg_company_selector"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp">

                <EditText
                    android:id="@+id/et_login_pwd"
                    style="@style/AutoMatchTextViewStyle"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:background="@null"
                    android:drawableLeft="@mipmap/ic_password"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_login_pwd"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textSize="@dimen/normal_text_size"
                    android:textColorHint="@color/secondary_text"
                    android:textCursorDrawable="@drawable/ic_focus" />

                <CheckBox
                    android:id="@+id/cb_show_pwd"
                    style="@style/WrapWrap"
                    android:layout_marginRight="10dp"
                    android:button="@drawable/bg_checkbox_selector"
                    android:checked="false" />
            </LinearLayout>

            <Button
                android:id="@+id/btn_login"
                style="@style/MatchWrap"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_button"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="@dimen/large_text_size" />

            <TextView
                android:id="@+id/tv_has_question"
                style="@style/NormalTextViewStyle"
                android:layout_width="match_parent"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:padding="5dp"
                android:text="@string/has_question" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>