<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MatchMatch.Vertical"
    android:background="@color/bg_base">

    <RelativeLayout
        style="@style/MatchWrap"
        android:background="@mipmap/bg_user_background"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/iv_user_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/ic_default_img" />

        <TextView
            android:id="@+id/tv_user"
            style="@style/NormalTextViewStyle"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/iv_user_img"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            tools:text="careshi2015(张三)" />

        <TextView
            android:id="@+id/tv_company"
            style="@style/NormalTextViewStyle"
            android:layout_below="@id/tv_user"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/iv_user_img"
            android:gravity="center_vertical"
            android:textColor="#e9bdaf"
            android:textSize="@dimen/small_text_size"
            tools:text="深圳市新运力科技有限公司" />
    </RelativeLayout>

    <ImageView
        style="@style/DivideLineStyle"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/ll_has_update"
        style="@style/MatchWrap.Horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/soft_update"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/tv_version_name"
            style="@style/NormalTextViewStyle"
            android:layout_marginRight="5dp"
            tools:text="V1.0" />

        <TextView
            android:id="@+id/tv_has_update"
            style="@style/NormalTextViewStyle"
            android:background="@drawable/bg_button"
            android:paddingBottom="2.5dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="2.5dp"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size"
            android:visibility="gone"
            tools:text="有更新" />

        <ImageView style="@style/RightArrowStyle" />
    </LinearLayout>

    <ImageView style="@style/DivideLineStyle" />

    <ImageView
        style="@style/DivideLineStyle"
        android:layout_marginTop="12dp" />

    <LinearLayout
        android:id="@+id/ll_help"
        style="@style/MatchWrap.Horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/help"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size" />


        <ImageView style="@style/RightArrowStyle" />
    </LinearLayout>

    <ImageView style="@style/DivideLineStyle" />


    <LinearLayout
        android:id="@+id/ll_about_us"
        style="@style/MatchWrap.Horizontal"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:text="@string/about_us"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/normal_text_size" />

        <ImageView style="@style/RightArrowStyle" />
    </LinearLayout>

    <ImageView style="@style/DivideLineStyle" />

    <ImageView
        style="@style/DivideLineStyle"
        android:layout_marginTop="12dp" />

    <Button
        android:id="@+id/btn_exit"
        style="@style/MatchWrap"
        android:background="@color/white"
        android:text="退出登录"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/normal_text_size" />

    <ImageView style="@style/DivideLineStyle" />

</LinearLayout>